<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/gradient_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/emailbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:0.3"
        android:importantForAccessibility="no" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/profile"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/your_logo"
        android:background="@drawable/circular_border"
        app:layout_constraintTop_toTopOf="@id/backgroundImageView"
        app:layout_constraintBottom_toBottomOf="@id/backgroundImageView"
        app:layout_constraintStart_toStartOf="@id/backgroundImageView"
        app:layout_constraintEnd_toEndOf="@id/backgroundImageView"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/logo_description"
        />

    <EditText
        android:id="@+id/emailbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/backgroundImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_the_email"
        android:background="@drawable/rounded_background_selector"
        android:padding="12dp"
        android:autofillHints="No"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/passwordbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="12dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:background="@drawable/rounded_background_selector"
        android:padding="12dp"
        android:importantForAutofill="no" />


    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/passwordbox"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/lockIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="20dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_lock"
        app:layout_constraintStart_toEndOf="@id/rememberMeCheckBox"
        app:layout_constraintTop_toBottomOf="@id/passwordbox" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordbox" />

    <Button
        android:id="@+id/mybtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/gradient_button_background"
        android:elevation="8dp"
        android:padding="16dp"
        />


    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mybtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/gradient_button_background"
        android:elevation="8dp"
        android:padding="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
